・ペアの数字組数の回答が0組だけになる不具合を修正 等